<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_steps_tracker"
        android:icon="@drawable/ic_step_icon_1"
        android:title="@string/steps_tracker" />

    <item
        android:id="@+id/navigation_water_tracker"
        android:icon="@drawable/ic_watericon_1"
        android:title="@string/water_tracker" />

    <item
        android:id="@+id/navigation_daily_motivational_content"
        android:icon="@drawable/ic_motivation_icon"
        android:title="@string/daily_motivational_content" />

    <item
        android:id="@+id/navigation_humor_for_wellness"
        android:icon="@drawable/ic_humor_icon"
        android:title="@string/humor_for_wellness" />

</menu>