<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.s20.mobdev_project_mindfulfit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_steps_tracker"
        android:name="com.example.s20.mobdev_project_mindfulfit.ui.steps.StepsTrackerFragment"
        android:label="@string/steps_tracker"
        tools:layout="@layout/fragment_steps_tracker" />

    <fragment
        android:id="@+id/navigation_water_tracker"
        android:name="com.example.s20.mobdev_project_mindfulfit.ui.water.WaterTrackerFragment"
        android:label="@string/water_tracker"
        tools:layout="@layout/fragment_water_tracker" />

    <fragment
        android:id="@+id/navigation_daily_motivational_content"
        android:name="com.example.s20.mobdev_project_mindfulfit.ui.motivation.DailyMotivationalContentFragment"
        android:label="@string/daily_motivational_content"
        tools:layout="@layout/fragment_daily_motivational_content" />

    <fragment
        android:id="@+id/navigation_humor_for_wellness"
        android:name="com.example.s20.mobdev_project_mindfulfit.ui.humor.HumorForWellnessFragment"
        android:label="@string/humor_for_wellness"
        tools:layout="@layout/fragment_humor_for_wellness" />
</navigation>